# api

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: analytics.py  auth.py  config.py  crud.py  geocoding.py  geocoding_worker.py  logging_config.py  main.py  models.py  schemas.py
app/routers/: admin.py  health.py  people.py
docs/: er-diagram.md  etl-diagram.md
migrations/: env.py
migrations/versions/: 001_initial.py  002_instalacion_coords.py
scripts/: backfill_addresses.py  dedup_facilities.py  import_csv.py  seed_test_data.py
tests/: conftest.py  test_api.py  test_crud.py  test_docs.py  test_geocoding.py  test_geocoding_worker.py  test_schemas.py
